# kaleidoscope

./: .gitignore  CMakeLists.txt  Makefile  README.md  toy.cpp
examples/: README.md  ks_stdlib.h
examples/04_trig/: Makefile  main.cpp  trig.ks
examples/05_printstar/: Makefile  main.cpp  printstar.ks
examples/06_mandel/: Makefile  main.cpp  mandel.ks
examples/07_fib/: Makefile  fib.ks  main.cpp
examples/08_avg/: Makefile
include/: ast.hpp  debug.hpp  lexer.hpp  parser.hpp  toplevel.hpp
src/: ast.cpp  debug.cpp  lexer.cpp  parser.cpp  toplevel.cpp  toy.cpp
